added empty skelletons for driver, scanner and parser

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -1,21 +1,40 @@
-CXXFLAGS += -O0 -Wall -Werror -ggdb3 -std=c++98 #-pedantic 
+CXXFLAGS += -O0 -Wall -Werror -ggdb3 -std=c++98 #-pedantic
 CXX = clang++
+LEX = flex
+YACC = bison
 GTEST_DIR = /home/sensorflo/src/gtest
 
-all: out out/efc
+all: out gensrc out/efc
 
 
 
-out:
-	mkdir -p out
+out gensrc:
+	mkdir -p $@
 
+
+GEN_HEADERS:=gensrc/parser.hpp gensrc/stack.hh gensrc/position.hh gensrc/location.hh
 
 efc: out/efc
 
-out/efc.o: efc.cpp
+gensrc/parser.cpp $(GEN_HEADERS): ef.yy *.h
+	$(YACC) $(YFLAGS) -d -o gensrc/parser.cpp $<
+
+gensrc/scanner.cpp: ef.l $(GEN_HEADERS) *.h
+	$(LEX) $(LFLAGS) -o $@ $<
+
+out/parser.o: gensrc/parser.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efc: out/efc.o
+out/scanner.o: gensrc/scanner.cpp $(GEN_HEADERS) *.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
+
+out/driver.o: driver.cpp $(GEN_HEADERS) *.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
+
+out/efc.o: efc.cpp $(GEN_HEADERS) *.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
+
+out/efc: out/parser.o out/scanner.o out/driver.o out/efc.o
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 
@@ -23,20 +42,22 @@ out/efc: out/efc.o
 efctest: out/efctest
 	out/efctest
 
-out/efctest.o: test/efctest.cpp
+out/efctest.o: test/efctest.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efctest: out/efctest.o out/libgtest.a 
-	$(CXX)  $(LDFLAGS) -pthread -o $@ $^ 
+out/efctest: out/efctest.o out/libgtest.a
+	$(CXX)  $(LDFLAGS) -pthread -o $@ $^
 
 
 
 out/libgtest.a: ${GTEST_DIR}/src/gtest-all.cc
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -isystem ${GTEST_DIR}/include -I${GTEST_DIR} -pthread -c -o out/gtest-all.o $<
-	$(AR) -rv $@ out/gtest-all.o
-#$(ARFLAGS)
+	$(AR) $(ARFLAGS) $@ out/gtest-all.o
+
+
 
 clean:
 	rm -rf out/*
+	rm -rf gensrc/*
 
 .PHONY: all efc efctest
