introduced given when then test names - !!! not for all tests yet !!!

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -42,10 +42,10 @@ out/efc: out/parser.o out/scanner.o out/driver.o out/efc.o
 efctest: out/efctest
 	out/efctest
 
-out/efctest.o: test/efctest.cpp $(GEN_HEADERS) *.h
+out/efctest.o: test/efctest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/scannertest.o: test/scannertest.cpp $(GEN_HEADERS) *.h
+out/scannertest.o: test/scannertest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
 out/efctest: out/scanner.o out/driver.o out/scannertest.o out/efctest.o out/libgtest.a
