--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -34,10 +34,13 @@ out/driver.o: driver.cpp $(GEN_HEADERS) *.h
 out/ast.o: ast.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
+out/irbuilderast.o: irbuilderast.cpp $(GEN_HEADERS) *.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
+
 out/efc.o: efc.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efc: out/parser.o out/scanner.o out/driver.o out/ast.o out/efc.o
+out/efc: out/parser.o out/scanner.o out/driver.o out/ast.o out/irbuilderast.o out/efc.o
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 
@@ -56,7 +59,10 @@ out/scannertest.o: test/scannertest.cpp $(GEN_HEADERS) *.h test/*.h
 out/scannerandparsertest.o: test/scannerandparsertest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efctest: out/scanner.o out/ast.o out/parser.o out/driver.o out/scannertest.o out/scannerandparsertest.o out/efctest.o out/libgtest.a
+out/irbuilderasttest.o: test/irbuilderasttest.cpp $(GEN_HEADERS) *.h test/*.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
+
+out/efctest: out/scanner.o out/ast.o out/irbuilderast.o out/parser.o out/driver.o out/scannertest.o out/scannerandparsertest.o out/irbuilderasttest.o out/efctest.o out/libgtest.a
 	$(CXX)  $(LDFLAGS) -pthread -o $@ $^
 
 
