Makefile: reordered objectfiles for linking efctest so lowlevel test are run before highlevel test
This is because its convenient when in the test output the low level classes come before the high level classes, since one usually looks at the first failing test.

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -67,7 +67,7 @@ out/irbuilderasttest.o: test/irbuilderasttest.cpp $(GEN_HEADERS) *.h test/*.h
 out/asttest.o: test/asttest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efctest: out/scanner.o out/ast.o out/irbuilderast.o out/parser.o out/driver.o out/scannertest.o out/scannerandparsertest.o out/irbuilderasttest.o out/asttest.o out/efctest.o out/libgtest.a
+out/efctest: out/scanner.o out/ast.o out/irbuilderast.o out/parser.o out/driver.o out/asttest.o out/scannertest.o out/scannerandparsertest.o out/irbuilderasttest.o out/efctest.o out/libgtest.a
 	$(CXX)  $(LDFLAGS) -pthread -o $@ $^ $(LIBS)
 
 
