--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -5,6 +5,7 @@ CXX = clang++
 LEX = flex
 YACC = bison
 GTEST_DIR = /home/sensorflo/src/gtest
+BISON_DATA_DIR := $(shell bison --print-datadir)
 
 all: out gensrc out/efc
 
@@ -19,7 +20,7 @@ GEN_HEADERS:=gensrc/parser.hpp gensrc/stack.hh gensrc/position.hh gensrc/locatio
 efc: out/efc
 
 gensrc/parser.cpp $(GEN_HEADERS): ef.yy *.h
-	$(YACC) $(YFLAGS) --verbose -x -Werror --warnings=all -d -o gensrc/parser.cpp $<
+	$(YACC) $(YFLAGS) --verbose -x -Werror --warnings=all -d -o gensrc/parser.cpp $< || xsltproc $(BISON_DATA_DIR)/xslt/xml2xhtml.xsl gensrc/parser.xml > gensrc/parser.xhtml
 
 gensrc/scanner.cpp: ef.l $(GEN_HEADERS) *.h
 	$(LEX) $(LFLAGS) -o $@ $<
