Extracted larger than tiny code fragments from ef.yy to new class ParserExt

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -34,6 +34,9 @@ out/parser.o: gensrc/parser.cpp $(GEN_HEADERS) *.h
 out/scanner.o: gensrc/scanner.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
+out/parserext.o: parserext.cpp $(GEN_HEADERS) *.h
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
+
 out/driver.o: driver.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
@@ -52,7 +55,7 @@ out/irbuilderast.o: irbuilderast.cpp $(GEN_HEADERS) *.h
 out/efc.o: efc.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efc: out/parser.o out/scanner.o out/driver.o out/ast.o out/objtype.o out/env.o out/irbuilderast.o out/efc.o
+out/efc: out/parser.o out/scanner.o out/parserext.o out/driver.o out/ast.o out/objtype.o out/env.o out/irbuilderast.o out/efc.o
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 
@@ -89,7 +92,7 @@ out/envtest.o: test/envtest.cpp $(GEN_HEADERS) *.h test/*.h
 out/objtypetest.o: test/objtypetest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efctest: out/scanner.o out/objtype.o out/ast.o out/env.o out/irbuilderast.o out/parser.o out/driver.o out/objtypetest.o out/envtest.o out/asttest.o out/scannertest.o out/scannerandparsertest.o out/irbuilderasttest.o out/gtestprinter.o out/test.o out/efctest.o out/libgtest.a
+out/efctest: out/scanner.o out/objtype.o out/ast.o out/env.o out/irbuilderast.o out/parser.o out/parserext.o out/driver.o out/objtypetest.o out/envtest.o out/asttest.o out/scannertest.o out/scannerandparsertest.o out/irbuilderasttest.o out/gtestprinter.o out/test.o out/efctest.o out/libgtest.a
 	$(CXX)  $(LDFLAGS) -pthread -o $@ $^ $(LIBS)
 
 
