--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -58,7 +58,7 @@ out/astdefaultiterator.o: astdefaultiterator.cpp $(GEN_HEADERS) *.h
 out/semanticanalizer.o: semanticanalizer.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/irbuilderast.o: irbuilderast.cpp $(GEN_HEADERS) *.h
+out/irgen.o: irgen.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
 out/astprinter.o: astprinter.cpp $(GEN_HEADERS) *.h
@@ -67,7 +67,7 @@ out/astprinter.o: astprinter.cpp $(GEN_HEADERS) *.h
 out/efc.o: efc.cpp $(GEN_HEADERS) *.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efc: out/parser.o out/scanner.o out/parserext.o out/driver.o out/ast.o out/errorhandler.o out/objtype.o out/astdefaultiterator.o out/env.o out/semanticanalizer.o out/irbuilderast.o out/astprinter.o out/efc.o
+out/efc: out/parser.o out/scanner.o out/parserext.o out/driver.o out/ast.o out/errorhandler.o out/objtype.o out/astdefaultiterator.o out/env.o out/semanticanalizer.o out/irgen.o out/astprinter.o out/efc.o
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LIBS)
 
 
@@ -101,7 +101,7 @@ out/scannerandparsertest.o: test/scannerandparsertest.cpp $(GEN_HEADERS) *.h tes
 out/semanticanalizertest.o: test/semanticanalizertest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/irbuilderasttest.o: test/irbuilderasttest.cpp $(GEN_HEADERS) *.h test/*.h
+out/irgentest.o: test/irgentest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -Wno-deprecated-declarations -c -o $@ $<
 
 out/astprintertest.o: test/astprintertest.cpp $(GEN_HEADERS) *.h test/*.h
@@ -122,7 +122,7 @@ out/envtest.o: test/envtest.cpp $(GEN_HEADERS) *.h test/*.h
 out/objtypetest.o: test/objtypetest.cpp $(GEN_HEADERS) *.h test/*.h
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -c -o $@ $<
 
-out/efctest: out/scanner.o out/objtype.o out/astdefaultiterator.o out/ast.o out/errorhandler.o out/env.o out/astprinter.o out/semanticanalizer.o out/irbuilderast.o out/parser.o out/parserext.o out/driver.o out/objtypetest.o out/envtest.o out/asttest.o out/errorhandlertest.o out/parserexttest.o out/scannertest.o out/scannerandparsertest.o out/astprintertest.o out/driversystemtest.o out/semanticanalizertest.o out/irbuilderasttest.o out/gtestprinter.o out/test.o out/tutorialstest.o out/efctest.o out/libgtest.a
+out/efctest: out/scanner.o out/objtype.o out/astdefaultiterator.o out/ast.o out/errorhandler.o out/env.o out/astprinter.o out/semanticanalizer.o out/irgen.o out/parser.o out/parserext.o out/driver.o out/objtypetest.o out/envtest.o out/asttest.o out/errorhandlertest.o out/parserexttest.o out/scannertest.o out/scannerandparsertest.o out/astprintertest.o out/driversystemtest.o out/semanticanalizertest.o out/irgentest.o out/gtestprinter.o out/test.o out/tutorialstest.o out/efctest.o out/libgtest.a
 	$(CXX)  $(LDFLAGS) -pthread -o $@ $^ $(LIBS)
 
 
