objtype: added copy ctor and clone method

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -56,10 +56,10 @@ out/efc: $(EFC_OBJS)
 # efctest
 # ----------------------------------------------------------------------
 
-EFCTEST_SRCS = errorhandlertest.cpp parserexttest.cpp scannertest.cpp \
-  scannerandparsertest.cpp astprintertest.cpp driversystemtest.cpp \
-  semanticanalizertest.cpp irgentest.cpp gtestprinter.cpp test.cpp \
-  tutorialstest.cpp efctest.cpp
+EFCTEST_SRCS = errorhandlertest.cpp objtypetest.cpp parserexttest.cpp	\
+  scannertest.cpp scannerandparsertest.cpp astprintertest.cpp	\
+  driversystemtest.cpp semanticanalizertest.cpp irgentest.cpp	\
+  gtestprinter.cpp test.cpp tutorialstest.cpp efctest.cpp
 
 EFCTEST_OBJS = $(patsubst %.cpp, out/%.o, $(EFCTEST_SRCS))
 
