extracted new class ExecutionEngineAdapter from IrGen

--- a/src/efc/Makefile
+++ b/src/efc/Makefile
@@ -20,7 +20,7 @@ GEN_HEADERS:=gensrc/parser.hpp gensrc/stack.hh gensrc/position.hh gensrc/locatio
 
 EFC_SRCS = driver.cpp parserext.cpp ast.cpp errorhandler.cpp objtype.cpp \
   astdefaultiterator.cpp env.cpp semanticanalizer.cpp irgen.cpp astprinter.cpp \
-  efc.cpp
+  efc.cpp executionengineadapter.cpp
 
 EFC_OBJS = out/parser.o out/scanner.o $(patsubst %.cpp, out/%.o, $(EFC_SRCS))
 
